--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
   node_bundler = "esbuild"
 
 [[redirects]]
-  from = "/"
+  from = "/api/getLanguages"
   to = "/.netlify/functions/getLanguages"
   status = 200
